Crashing using undo and multiple windows #64161

Closed
opened 2019-05-05 09:05:44 +02:00 by Cédric · 16 comments
Member

System Information
Operating system: Windows-10-10.0.17763 64 Bits
Graphics card: GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 418.91

Blender Version
Broken: version: 2.80 (sub 60), branch: blender2.7, commit date: 2019-05-03 21:09, hash: ee0d8426ab with factory settings
Worked: (optional)

Short description of error
Crash with return to desktop :

Version 280 sub 60 date 2019-05-03 21:09 hash ee0d8426ab6d
found bundled python: C:\Blender\Official\2.8\blender-2.80\2.80\python
Info: Total files 0 | Changed 0 | Failed 0
Info: Total files 0 | Changed 0 | Failed 0
Info: Total files 0 | Changed 0 | Failed 0
Error   : EXCEPTION_ACCESS_VIOLATION
Address : 0x00007FF7A21996B9
Module  : C:\Blender\Official\2.8\blender-2.80\blender.exe

Exact steps for others to reproduce the error
Select the cube
Press TAB to edit the cube
Select an edge and move it
Press TAB to return to object mode
Press CTRL-Z to undo
Crash
[Based on the default startup or an attached .blend file (as simple as possible)]
crash_on_undo.blend

**System Information** Operating system: Windows-10-10.0.17763 64 Bits Graphics card: GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 418.91 **Blender Version** Broken: version: 2.80 (sub 60), branch: blender2.7, commit date: 2019-05-03 21:09, hash: `ee0d8426ab` with factory settings Worked: (optional) **Short description of error** Crash with return to desktop : ``` Version 280 sub 60 date 2019-05-03 21:09 hash ee0d8426ab6d found bundled python: C:\Blender\Official\2.8\blender-2.80\2.80\python Info: Total files 0 | Changed 0 | Failed 0 Info: Total files 0 | Changed 0 | Failed 0 Info: Total files 0 | Changed 0 | Failed 0 Error : EXCEPTION_ACCESS_VIOLATION Address : 0x00007FF7A21996B9 Module : C:\Blender\Official\2.8\blender-2.80\blender.exe ``` **Exact steps for others to reproduce the error** Select the cube Press TAB to edit the cube Select an edge and move it Press TAB to return to object mode Press CTRL-Z to undo Crash [Based on the default startup or an attached .blend file (as simple as possible)] [crash_on_undo.blend](https://archive.blender.org/developer/F7006966/crash_on_undo.blend)
Author
Member

Added subscriber: @Clarkx

Added subscriber: @Clarkx

#64169 was marked as duplicate of this issue

#64169 was marked as duplicate of this issue

#64208 was marked as duplicate of this issue

#64208 was marked as duplicate of this issue

#64163 was marked as duplicate of this issue

#64163 was marked as duplicate of this issue

#64175 was marked as duplicate of this issue

#64175 was marked as duplicate of this issue

#64193 was marked as duplicate of this issue

#64193 was marked as duplicate of this issue

Added subscriber: @grosgood

Added subscriber: @grosgood

I believe this bug is also related to #64175 and #64163. As with the example files of those reports, opening crash_on_undo.blendreveals a session with two open windows; in this case the preferences editor. As with the other two reports, following the poster's instructions, as well as performing any other change (moving, scaling, rotating...), followed by Cntl-Z, causes a crash. The commonality in all three is the second open window.

version: 2.80 (sub 60), branch: master, commit date: 2019-05-05 07:44, hash: 1c58604070, type: Debug
build date: 2019-05-05, 08:42:02
platform: Linux

Reading symbols from /home/gosgood/git_repositories/build_linux_debug/bin/blender...done.
(gdb) set print thread-events off
(gdb) set print pretty on
(gdb) set args /media/render/gosgood/twoeight/crash_on_undo.blend
(gdb) run
Starting program: /home/gosgood/git_repositories/build_linux_debug/bin/blender /media/render/gosgood/twoeight/crash_on_undo.blend 
[Thread debugging using libthread_db enabled]
Using host libthread_db library "/lib64/libthread_db.so.1".

Thread 1 "blender" received signal SIGABRT, Aborted.
__GI_raise (sig=sig@entry=6) at ../sysdeps/unix/sysv/linux/raise.c:51
51	../sysdeps/unix/sysv/linux/raise.c: No such file or directory.
(gdb) bt
- 0  __GI_raise (sig=sig@entry=6) at ../sysdeps/unix/sysv/linux/raise.c:51
- 1  0x00007fffeaccb391 in __GI_abort () at abort.c:79
- 2  0x00005555577ff264 in DEG_get_evaluated_scene (graph=0x7fff7bfdda08) at /home/gosgood/git_repositories/blender/source/blender/depsgraph/intern/depsgraph_query.cc:151
- 3  0x0000555557afb954 in wm_event_do_handlers (C=0x7fffd3c58708) at /home/gosgood/git_repositories/blender/source/blender/windowmanager/intern/wm_event_system.c:3096
- 4  0x0000555557aefa11 in WM_main (C=0x7fffd3c58708) at /home/gosgood/git_repositories/blender/source/blender/windowmanager/intern/wm.c:418
- 5  0x0000555557451d34 in main (argc=2, argv=0x7fffffffdb48) at /home/gosgood/git_repositories/blender/source/creator/creator.c:500
(gdb) up
#1  0x00007fffeaccb391 in __GI_abort () at abort.c:79
79	abort.c: No such file or directory.
(gdb) up
#2  0x00005555577ff264 in DEG_get_evaluated_scene (graph=0x7fff7bfdda08) at /home/gosgood/git_repositories/blender/source/blender/depsgraph/intern/depsgraph_query.cc:151
151	  BLI_assert(scene_cow != NULL && DEG::deg_copy_on_write_is_expanded(&scene_cow->id));
(gdb) p scene_cow
$1 = (Scene *) 0x0
(gdb) p *deg_graph
$2 = {
  id_hash = 0x7fff75bb1b58, 
  id_nodes = std::vector of length 0, capacity 0, 
  time_source = 0x0, 
  need_update = true, 
  id_type_updated = '\000' <repeats 36 times>, 
  entry_tags = 0x7fff75bb1b08, 
  operations = std::vector of length 0, capacity 0, 
  lock = 1, 
  scene = 0x7fff7922a008, 
  view_layer = 0x7fff79224b88, 
  mode = DAG_EVAL_VIEWPORT, 
  ctime = 64, 
  scene_cow = 0x0, 
  is_active = false, 
  debug_flags = 0, 
  debug_name = "SCScene :: View Layer", 
  debug_is_evaluating = false, 
  physics_relations = {0x0, 0x0, 0x0, 0x0}
}
(gdb) 

system-info.txt

I believe this bug is also related to #64175 and #64163. As with the example files of those reports, opening **crash_on_undo.blend**reveals a session with two open windows; in this case the preferences editor. As with the other two reports, following the poster's instructions, as well as performing any other change (moving, scaling, rotating...), followed by Cntl-Z, causes a crash. The commonality in all three is the second open window. version: 2.80 (sub 60), branch: master, commit date: 2019-05-05 07:44, hash: 1c5860407068, type: Debug build date: 2019-05-05, 08:42:02 platform: Linux ``` Reading symbols from /home/gosgood/git_repositories/build_linux_debug/bin/blender...done. (gdb) set print thread-events off (gdb) set print pretty on (gdb) set args /media/render/gosgood/twoeight/crash_on_undo.blend (gdb) run Starting program: /home/gosgood/git_repositories/build_linux_debug/bin/blender /media/render/gosgood/twoeight/crash_on_undo.blend [Thread debugging using libthread_db enabled] Using host libthread_db library "/lib64/libthread_db.so.1". Thread 1 "blender" received signal SIGABRT, Aborted. __GI_raise (sig=sig@entry=6) at ../sysdeps/unix/sysv/linux/raise.c:51 51 ../sysdeps/unix/sysv/linux/raise.c: No such file or directory. (gdb) bt - 0 __GI_raise (sig=sig@entry=6) at ../sysdeps/unix/sysv/linux/raise.c:51 - 1 0x00007fffeaccb391 in __GI_abort () at abort.c:79 - 2 0x00005555577ff264 in DEG_get_evaluated_scene (graph=0x7fff7bfdda08) at /home/gosgood/git_repositories/blender/source/blender/depsgraph/intern/depsgraph_query.cc:151 - 3 0x0000555557afb954 in wm_event_do_handlers (C=0x7fffd3c58708) at /home/gosgood/git_repositories/blender/source/blender/windowmanager/intern/wm_event_system.c:3096 - 4 0x0000555557aefa11 in WM_main (C=0x7fffd3c58708) at /home/gosgood/git_repositories/blender/source/blender/windowmanager/intern/wm.c:418 - 5 0x0000555557451d34 in main (argc=2, argv=0x7fffffffdb48) at /home/gosgood/git_repositories/blender/source/creator/creator.c:500 (gdb) up #1 0x00007fffeaccb391 in __GI_abort () at abort.c:79 79 abort.c: No such file or directory. (gdb) up #2 0x00005555577ff264 in DEG_get_evaluated_scene (graph=0x7fff7bfdda08) at /home/gosgood/git_repositories/blender/source/blender/depsgraph/intern/depsgraph_query.cc:151 151 BLI_assert(scene_cow != NULL && DEG::deg_copy_on_write_is_expanded(&scene_cow->id)); (gdb) p scene_cow $1 = (Scene *) 0x0 (gdb) p *deg_graph $2 = { id_hash = 0x7fff75bb1b58, id_nodes = std::vector of length 0, capacity 0, time_source = 0x0, need_update = true, id_type_updated = '\000' <repeats 36 times>, entry_tags = 0x7fff75bb1b08, operations = std::vector of length 0, capacity 0, lock = 1, scene = 0x7fff7922a008, view_layer = 0x7fff79224b88, mode = DAG_EVAL_VIEWPORT, ctime = 64, scene_cow = 0x0, is_active = false, debug_flags = 0, debug_name = "SCScene :: View Layer", debug_is_evaluating = false, physics_relations = {0x0, 0x0, 0x0, 0x0} } (gdb) ``` [system-info.txt](https://archive.blender.org/developer/F7008100/system-info.txt)
Brecht Van Lommel changed title from Crash to desktop using undo to Crashing using undo and multiple windows 2019-05-06 16:30:39 +02:00
Sergey Sharybin was assigned by Brecht Van Lommel 2019-05-06 16:30:39 +02:00

Added subscriber: @alonabrany

Added subscriber: @alonabrany

Added subscribers: @piotr-14, @Dspazio

Added subscribers: @piotr-14, @Dspazio

Added subscriber: @The_Doctor

Added subscriber: @The_Doctor

Added subscriber: @hirtspeedy

Added subscriber: @hirtspeedy

Added subscribers: @velorth, @Odys

Added subscribers: @velorth, @Odys

This issue was referenced by 4cdb4b9532

This issue was referenced by 4cdb4b9532c8151ec9f1caba7a764c4f5a334f30

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

This issue was referenced by 2b9965122e

This issue was referenced by 2b9965122e132a2c25652ebf62d6353183f0f644
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#64161
No description provided.