Fix T64161: Crashing using undo and multiple windows

It is possible that dependency graph was not yet initialized,
so need to do NULL pointer check.